# Skatinov-LeadLab

./: .env.dev.example  .env.docker.example  .env.prod.example  .env.test.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_config.py  test_config_all_envs.py
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py  health.py  leads.py
app/config/: __init__.py  settings.py
app/db/: database.py
app/models/: lead.py
app/schemas/: leads.py
app/services/: leads.py
frontend/: README.md
migrations/: env.py
migrations/versions/: d88f5dc1c6e0_create_leads_table.py
