[project]
name = "skatinov-leadlab"
version = "0.1.0"
description = "Lead management"
authors = [
    {name = "thed1m3dr0ll"}
]
readme = "README.md"
requires-python = "3.14.2"
dependencies = [
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
